chore: merge feature/refatoracao-parte-01 into develop (#131)