@@ -3,7 +3,7 @@ package net.ddns.adambravo79.tmill.telegram.core;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
@@ -19,6 +19,7 @@ import jakarta.annotation.PostConstruct;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import net.ddns.adambravo79.tmill.telegram.exception.TelegramFileException;
+import net.ddns.adambravo79.tmill.util.LogSanitizer;
 
 @Slf4j
 @Component
@@ -33,7 +34,7 @@ public class TelegramFacade {
 
     @PostConstruct
     public void init() {
-        log.info("🔑 Token carregado: {}", botToken.substring(0, 4) + "...");
+        log.info("🔑 Token carregado: {}", maskToken(botToken));
     }
 
     public void enviarMensagem(long chatId, String texto) {
@@ -103,7 +104,7 @@ public class TelegramFacade {
     public void enviarMidia(long chatId, String filePathOrUrl, String caption) {
         safeExecutor.run(
                 chatId,
-                (id, msg) -> enviarMensagem(id, msg),
+                this::enviarMensagem, // method reference
                 () -> {
                     try {
                         String lower = filePathOrUrl.toLowerCase();
@@ -127,7 +128,6 @@ public class TelegramFacade {
                                             .caption(caption)
                                             .parseMode(ParseMode.HTML));
                         } else {
-                            // Se não reconhecer, tenta como foto (fallback)
                             executor.execute(
                                     new SendPhoto(chatId, filePathOrUrl)
                                             .caption(caption)
@@ -137,8 +137,8 @@ public class TelegramFacade {
                         log.warn(
                                 "⚠️ Falha ao enviar mídia para chatId {}: {}. Enviando apenas"
                                         + " texto.",
-                                chatId,
-                                e.getMessage());
+                                LogSanitizer.sanitizeId(chatId),
+                                LogSanitizer.sanitize(e.getMessage()));
                         enviarMensagem(chatId, caption);
                     }
                 });
@@ -149,7 +149,7 @@ public class TelegramFacade {
         try {
             executor.execute(new SendMessage(chatId, texto));
         } catch (Exception e) {
-            log.error("Falha no fallback", e);
+            log.error("Falha no fallback: {}", LogSanitizer.sanitize(e.getMessage()));
         }
     }
 
@@ -170,15 +170,26 @@ public class TelegramFacade {
     public byte[] downloadFile(File file) {
         String filePath = file.filePath();
         String url = "https://api.telegram.org/file/bot" + botToken + "/" + filePath;
+        HttpURLConnection conn = null;
         try {
-            HttpURLConnection conn = (HttpURLConnection) new URL(url).openConnection();
-            conn.setConnectTimeout(30_000); // 30s para conectar
-            conn.setReadTimeout(120_000); // 120s para ler (arquivos grandes)
+            conn = (HttpURLConnection) URI.create(url).toURL().openConnection(); // corrigido
+            conn.setConnectTimeout(30_000);
+            conn.setReadTimeout(120_000);
             try (InputStream is = conn.getInputStream()) {
                 return is.readAllBytes();
             }
         } catch (IOException e) {
             throw new TelegramFileException("Erro ao baixar arquivo: " + filePath, e);
+        } finally {
+            if (conn != null) conn.disconnect();
         }
+    }
+
+    /** Mascara um token para exibição em logs. Exibe apenas os 4 primeiros e 4 últimos caracteres. */
+    private static String maskToken(String token) {
+        if (token == null || token.length() < 8) {
+            return "***";
+        }
+        return token.substring(0, 4) + "..." + token.substring(token.length() - 4);
     }
 }
